Add jumbo banner as partial

--- a/README.rdoc
+++ b/README.rdoc
@@ -24,42 +24,7 @@
 
 *As a cook, I want to search through recipes, so that I can find something with a particular ingredient or word. (Hint: use the Textacular gem.)
 
-## Notes
+##To Do List
+-fix double jumbo banner on home page
 
 
-
-table portion
-  ingredient_id
-  quantity
-  recipes_id
-
-
-reviews
-  star :integer
-  user_id
-  content :string
-  recipie_id
-
-Notes: 
-
-Pages: 
-
--Home Page 
--Add New Recipe Form Page 
--Each Recipe should have a page 
--Rate Recipe page 
--Query Page 
-	-List all recipes
-	-List all ingredients
-	-List all tags
-
-
-
-HOME PAGE 
--view recipes(in header)
--3 columns 
-	-add new recipe 
-	-rate recipes (Are you a cook? Click here to rate recipes?)
-	-find recipe by ingredient  
-
- 
